--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -21,6 +21,9 @@ log = "0.4.17"
 serde = "1.0.151"
 
 
+
+
+
 codec = {package = "parity-scale-codec", workspace = true, features = ["derive"] }
 scale-info = { workspace = true, features = ["derive"] }
 
@@ -49,6 +52,9 @@ sp-session = { workspace = true }
 sp-std = { workspace = true }
 sp-transaction-pool = { workspace = true }
 sp-version = { workspace = true }
+#substrate-validator-set = {workspace = true}
+
+
 
 # Used for the node template's RPCs
 frame-system-rpc-runtime-api = { workspace = true }
@@ -112,8 +118,11 @@ std = [
 	"sp-session/std",
 	"sp-std/std",
 	"sp-transaction-pool/std",
-	"sp-version/std",
+	"sp-version/std",	
+	"validator-set/std", 
+	"pallet-im-online/std",
 ]
+
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
@@ -123,7 +132,9 @@ runtime-benchmarks = [
 	"pallet-grandpa/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
+	"pallet-im-online/runtime-benchmarks",
 ]
+
 try-runtime = [
 	"frame-try-runtime",
 	"frame-executive/try-runtime",
@@ -137,3 +148,18 @@ try-runtime = [
 	"pallet-timestamp/try-runtime",
 	"pallet-transaction-payment/try-runtime",
 ]
+
+
+[dependencies.validator-set]
+default-features = false
+package = 'substrate-validator-set'
+git = 'https://github.com/gautamdhameja/substrate-validator-set.git'
+tag = 'polkadot-v0.9.37'
+
+
+
+
+[dependencies.pallet-im-online]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+branch = 'polkadot-v0.9.37'
