--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ scale-info = { version = "2.3.0", default-features = false }
 
 
 # substrate-validator-set = { default-features = false, git = "https://github.com/gautamdhameja/substrate-validator-set.git", version = "0.9.42" }
-
+pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
 pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
 pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
 pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
