--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -27,6 +27,7 @@ serde = "1.0.151"
 codec = {package = "parity-scale-codec", workspace = true, features = ["derive"] }
 scale-info = { workspace = true, features = ["derive"] }
 
+pallet-preimage = { workspace = true }
 pallet-scheduler = { workspace = true }
 pallet-collective = { workspace = true }
 pallet-democracy = { workspace = true }
@@ -89,6 +90,7 @@ std = [
 
 
 	"pallet-scheduler/std",
+	"pallet-preimage/std",
 	"pallet-balances/std",
 	"serde/std",
 	"frame-try-runtime?/std",
@@ -150,8 +152,6 @@ runtime-benchmarks = [
 	"pallet-democracy/runtime-benchmarks",
 	"pallet-scheduler/runtime-benchmarks",
 
-
-
 ]
 
 try-runtime = [
@@ -165,6 +165,7 @@ try-runtime = [
 	"pallet-randomness-collective-flip/try-runtime",
 	"pallet-sudo/try-runtime",
 	"pallet-timestamp/try-runtime",
+	"pallet-preimage/runtime-benchmarks",
 	"pallet-transaction-payment/try-runtime",
 ]
 
