--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
 ]
 
 [workspace.package]
-authors = ["Usama Ali, Asad Ali"]
+authors = ["Asad Ali (asad.sial.4142@gmail.com)"]
 repository = "https://github.com/Ali-Usama/storage-chain"
 
 
