--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -7,179 +7,151 @@ homepage = "https://substrate.io/"
 edition = "2021"
 license = "Unlicense"
 publish = false
-repository = { workspace = true}
 
 [package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+targets = ["aarch64-unknown-linux-gnu"]
+#targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+getrandom = { version = "0.2.14", default-features = false, features = ["js"] }
+codec = { workspace = true, features = ["derive"] }
+scale-info = { workspace = true, features = ["derive", "serde"] }
+serde = { workspace = true, features = ["derive"] }
+libsecp256k1 = { workspace = true }
 sha3 = { workspace = true }
+log = { workspace = true }
 impl-serde = { workspace = true }
-#parity-scale-codec = { version = "3.0.0", features = [ "derive" ] }
-libsecp256k1 = { workspace = true, features = [ "hmac" ] }
-log = "0.4.17"
-serde = "1.0.151"
 
-
-
-
-
-codec = {package = "parity-scale-codec", workspace = true, features = ["derive"] }
-scale-info = { workspace = true, features = ["derive"] }
-
+pallet-assets = { workspace = true }
+pallet-asset-rate = { workspace = true }
 pallet-preimage = { workspace = true }
 pallet-scheduler = { workspace = true }
 pallet-collective = { workspace = true }
 pallet-democracy = { workspace = true }
 pallet-treasury = { workspace = true }
 pallet-aura = { workspace = true }
-pallet-session = { workspace = true, features = [ "historical" ] }
+pallet-session = { workspace = true }
 pallet-authorship = { workspace = true }
 pallet-balances = { workspace = true }
-frame-support = { workspace = true }
+frame-support = { workspace = true, features = ["experimental"] }
 pallet-grandpa = { workspace = true }
-pallet-randomness-collective-flip = { workspace = true }
+sp-consensus-grandpa = { workspace = true, features = ["serde"] }
+pallet-babe = { workspace = true }
 pallet-sudo = { workspace = true }
 frame-system = { workspace = true }
-frame-try-runtime = { workspace = true, optional = true }
 pallet-timestamp = { workspace = true }
 pallet-transaction-payment = { workspace = true }
 frame-executive = { workspace = true }
 sp-api = { workspace = true }
 sp-block-builder = { workspace = true }
-sp-consensus-aura = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
+sp-consensus-aura = { workspace = true, features = ["serde"] }
+sp-core = { workspace = true, features = ["serde"] }
 sp-inherents = { workspace = true }
 sp-offchain = { workspace = true }
-sp-runtime = { workspace = true }
+sp-runtime = { workspace = true, features = ["serde"] }
 sp-session = { workspace = true }
 sp-std = { workspace = true }
 sp-transaction-pool = { workspace = true }
-sp-version = { workspace = true }
-#substrate-validator-set = {workspace = true}
-
-
+sp-version = { workspace = true, features = ["serde"] }
+sp-io = { workspace = true }
+validator-set = { workspace = true }
 
 # Used for the node template's RPCs
-frame-system-rpc-runtime-api = { workspace = true }
-pallet-transaction-payment-rpc-runtime-api = { workspace = true }
+frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false }
 
 # Used for runtime benchmarking
-frame-benchmarking = { workspace = true, optional = true }
-frame-system-benchmarking = { workspace = true, optional = true }
+#frame-benchmarking = { workspace = true }
+#frame-system-benchmarking = { workspace = true }
 
 # evm dependencies
-pallet-evm = {  workspace = true }
-pallet-evm-precompile-simple = {  workspace = true }
-pallet-evm-precompile-modexp = {  workspace = true }
-pallet-evm-precompile-sha3fips = {  workspace = true }
-pallet-ethereum = {  workspace = true }
-fp-evm = { workspace = true }
-fp-self-contained = { workspace = true }
+pallet-evm = { workspace = true }
+pallet-evm-precompile-simple = { workspace = true }
+pallet-evm-precompile-modexp = { workspace = true }
+pallet-evm-precompile-sha3fips = { workspace = true }
+pallet-ethereum = { workspace = true }
+pallet-im-online = { workspace = true }
+fp-evm = { workspace = true, features = ["serde"] }
 fp-rpc = { workspace = true }
 pallet-base-fee = { workspace = true }
-
-
-[build-dependencies]
-substrate-wasm-builder = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
+fp-self-contained = { workspace = true, features = ["serde"] }
 
 [features]
 default = ["std"]
 std = [
-
-	"pallet-treasury/std",
-	"pallet-scheduler/std",
-	"pallet-preimage/std",
-	"pallet-balances/std",
-	"serde/std",
-	"frame-try-runtime?/std",
-	"frame-system-benchmarking?/std",
-	"frame-benchmarking?/std",
+	"log/std",
+	"sha3/std",
 	"codec/std",
 	"scale-info/std",
+	"serde/std",
 	"fp-evm/std",
-	"fp-self-contained/std",
 	"fp-rpc/std",
+	"fp-self-contained/std",
 	"frame-executive/std",
 	"frame-support/std",
 	"frame-system-rpc-runtime-api/std",
 	"frame-system/std",
-	"frame-try-runtime/std",
+	"pallet-assets/std",
+	"pallet-asset-rate/std",
 	"pallet-aura/std",
+	"pallet-babe/std",
 	"pallet-balances/std",
 	"pallet-base-fee/std",
 	"pallet-evm/std",
+	"pallet-session/std",
+	"pallet-evm-precompile-simple/std",
+	"pallet-evm-precompile-modexp/std",
+	"pallet-evm-precompile-sha3fips/std",
 	"pallet-ethereum/std",
 	"pallet-grandpa/std",
-	"pallet-randomness-collective-flip/std",
 	"pallet-sudo/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
+	"pallet-im-online/std",
+	"pallet-collective/std",
+	"pallet-democracy/std",
+	"pallet-treasury/std",
+	"pallet-scheduler/std",
+	"pallet-preimage/std",
+	"pallet-balances/std",
+	"pallet-authorship/std",
+	"sp-consensus-grandpa/std",
 	"sp-api/std",
 	"sp-block-builder/std",
 	"sp-consensus-aura/std",
 	"sp-core/std",
 	"sp-inherents/std",
-	"sp-io/std",
 	"sp-offchain/std",
 	"sp-runtime/std",
 	"sp-session/std",
 	"sp-std/std",
+	"sp-io/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",	
-	"validator-set/std", 
-	"pallet-im-online/std",
-	"pallet-collective/std",
-	"pallet-democracy/std",
-
-
+	"validator-set/std",
+	"substrate-wasm-builder"
 ]
 
 runtime-benchmarks = [
-	"frame-benchmarking/runtime-benchmarks",
-	"frame-support/runtime-benchmarks",
-	"frame-system-benchmarking/runtime-benchmarks",
-	"frame-system/runtime-benchmarks",
-	"pallet-balances/runtime-benchmarks",
-	"pallet-grandpa/runtime-benchmarks",
-	"pallet-timestamp/runtime-benchmarks",
-	"pallet-treasury/runtime-benchmarks",
-	"sp-runtime/runtime-benchmarks",
-	"pallet-im-online/runtime-benchmarks",
-	"pallet-collective/runtime-benchmarks",
-	"pallet-democracy/runtime-benchmarks",
-	"pallet-scheduler/runtime-benchmarks",
-
+#	"frame-benchmarking/runtime-benchmarks",
+#	"frame-support/runtime-benchmarks",
+#	"frame-system-benchmarking/runtime-benchmarks",
+#	"frame-system/runtime-benchmarks",
+#	"pallet-balances/runtime-benchmarks",
+#	"pallet-grandpa/runtime-benchmarks",
+#	"pallet-timestamp/runtime-benchmarks",
+#	"pallet-treasury/runtime-benchmarks",
+#	"sp-runtime/runtime-benchmarks",
+#	"pallet-im-online/runtime-benchmarks",
+#	"pallet-collective/runtime-benchmarks",
+#	"pallet-democracy/runtime-benchmarks",
+#	"pallet-scheduler/runtime-benchmarks",
 ]
 
 try-runtime = [
-	"frame-try-runtime",
-	"frame-executive/try-runtime",
-	"frame-system/try-runtime",
-	"frame-support/try-runtime",
-	"pallet-aura/try-runtime",
-	"pallet-balances/try-runtime",
-	"pallet-grandpa/try-runtime",
-	"pallet-randomness-collective-flip/try-runtime",
-	"pallet-sudo/try-runtime",
-	"pallet-timestamp/try-runtime",
-	"pallet-preimage/runtime-benchmarks",
-	"pallet-transaction-payment/try-runtime",
+	#
 ]
 
-
-[dependencies.validator-set]
-default-features = false
-package = 'substrate-validator-set'
-git = 'https://github.com/gautamdhameja/substrate-validator-set.git'
-tag = 'polkadot-v0.9.37'
-
-
-
-
-[dependencies.pallet-im-online]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = 'polkadot-v0.9.37'
+[build-dependencies]
+substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", optional = true }
