--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://substrate.io/"
 edition = "2021"
 license = "Unlicense"
 publish = false
-repository = "https://github.com/asadalisiyal/oslo-network"
+#repository = "https://github.com/asadalisiyal/oslo-network"
 build = "build.rs"
 
 [package.metadata.docs.rs]
