--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -54,7 +54,7 @@ sp-std = { workspace = true }
 sp-transaction-pool = { workspace = true }
 sp-version = { workspace = true, features = ["serde"] }
 sp-io = { workspace = true }
-sp-genesis-builder = { workspace = true }
+sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
 validator-set = { workspace = true }
 
 # Used for the node template's RPCs
