--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -11,21 +11,22 @@ repository = "http://github.com/drmnana/Oslo"
 build = "build.rs"
 
 [package.metadata.docs.rs]
-targets = ["aarch64-unknown-linux-gnu"]
-#targets = ["x86_64-unknown-linux-gnu"]
+#targets = ["aarch64-unknown-linux-gnu"]
+targets = ["x86_64-unknown-linux-gnu"]
 
 [[bin]]
 name = "oslo-network"
 
 [dependencies]
 rustc-hex = { version = "2.1.0" }
-serde_json = { version = "1.0.114", default-features = true, features = ["arbitrary_precision"] }
+serde_json = { version = "1.0.114", default-features = false, features = ["arbitrary_precision"] }
 jsonrpsee = { default-features = false, version = "0.22", features = ["server", "macros"] }
 clap = { workspace = true }
 hex-literal = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
 array-bytes = { workspace = true }
+#libp2p-identity = { version = "=0.1.3" }
 
 fp-rpc = { workspace = true }
 fp-storage = { workspace = true }
@@ -41,8 +42,9 @@ fc-api = { workspace = true }
 fc-storage = { workspace = true }
 fc-cli = { workspace = true }
 
-sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
+sp-io = { workspace = true }
 sp-consensus-aura = { workspace = true }
+sp-consensus = { workspace = true }
 sp-consensus-grandpa = { workspace = true, features = ["serde", "sp-keystore"] }
 sp-timestamp = { workspace = true }
 sp-core = { workspace = true }
@@ -69,7 +71,7 @@ sc-network-sync = { workspace = true }
 sc-basic-authorship = { workspace = true }
 sc-offchain = { workspace = true }
 
-pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0" }
 pallet-im-online = { workspace = true }
 pallet-collective = { workspace = true }
 pallet-sudo = { workspace = true }
@@ -78,16 +80,13 @@ pallet-transaction-payment = { workspace = true }
 frame-system = { workspace = true }
 frame-benchmarking = { workspace = true }
 frame-benchmarking-cli = { workspace = true }
-substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
+substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0" }
 
 # Local Dependencies
 oslo-network-runtime = { path = "../runtime" }
 
-# CLI-specific dependencies
-try-runtime-cli = { workspace = true, optional = true }
-
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
+substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0" }
 
 [features]
 default = ["rocksdb"]
@@ -107,12 +106,4 @@ runtime-benchmarks = [
 	"frame-system/runtime-benchmarks",
 	"sc-service/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks"
-]
-
-try-runtime = [
-	"frame-system/try-runtime",
-	"pallet-transaction-payment/try-runtime",
-	"oslo-network-runtime/try-runtime",
-	"sp-runtime/try-runtime",
-	"try-runtime-cli/try-runtime",
 ]
