--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,8 +9,8 @@ license = "Unlicense"
 publish = false
 
 [package.metadata.docs.rs]
-targets = ["aarch64-unknown-linux-gnu"]
-#targets = ["x86_64-unknown-linux-gnu"]
+#targets = ["aarch64-unknown-linux-gnu"]
+targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 getrandom = { version = "0.2.14", default-features = false, features = ["js"] }
@@ -55,12 +55,12 @@ sp-storage = { workspace = true }
 sp-transaction-pool = { workspace = true }
 sp-version = { workspace = true, features = ["serde"] }
 sp-io = { workspace = true }
-sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0" }
+sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0" }
 validator-set = { workspace = true }
 
 # Used for the node template's RPCs
-frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false }
-pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", default-features = false }
+frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0", default-features = false }
 
 # Used for runtime benchmarking
 frame-benchmarking = { workspace = true }
@@ -186,4 +186,4 @@ try-runtime = [
 ]
 
 [build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.9.0", optional = true }
+substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-crates-io-v1.13.0", optional = true }
