--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "oslo-network"
-version = "4.0.0-dev"
-description = "A fresh FRAME-based Substrate node, ready for hacking."
+version = "5.0.0-dev"
+description = "The reference node for the Oslo network."
 authors = ["Asad Ali (asad.sial.4142@gmail.com)", "Josey Medley"]
-homepage = "https://substrate.io/"
+homepage = "https://oslocrypto.com/"
 edition = "2021"
 license = "Unlicense"
 publish = false
@@ -26,8 +26,8 @@ hex-literal = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
 array-bytes = { workspace = true }
-#libp2p-identity = { version = "=0.1.3" }
 
+fp-account = { workspace = true, features = ["serde"] }
 fp-rpc = { workspace = true }
 fp-storage = { workspace = true }
 fp-dynamic-fee = { workspace = true, default-features = true }
